--- a/style.css
+++ b/style.css
@@ -53,6 +53,12 @@ h2{
 	margin-bottom: 10px;
 }
 
+h5{
+	position: relative;
+	padding: 0 0 10px;
+	margin-bottom: 10px;
+}
+
 h2:after{
 	content: '';
     position: absolute;
