--- a/style.css
+++ b/style.css
@@ -373,8 +373,8 @@ header .logo
 
 .heart-btn{
   position: absolute;
-  top: 105%;
-  left: 50%;
+  top: 119%;
+  left: 60%;
   transform: translate(-50%,-50%);
 }
 .content{
@@ -406,7 +406,7 @@ header .logo
   font-family: 'Montserrat',sans-serif;
 }
 .numb:before{
-  content: '12';
+  content: '';
   font-size: 21px;
   margin-left: 7px;
   font-weight: 600;
@@ -414,7 +414,7 @@ header .logo
   font-family: sans-serif;
 }
 .numb.heart-active:before{
-  content: '13';
+  content: '';
   color: #000;
 }
 .text.heart-active{
